<resources>
    <string name="app_name">ChitChat</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">ChitChat is a fast, secure messaging app that keeps you connected with anyone, anywhere, through texts, calls, and media sharing.</string>
    <string name="title_welcome_page">Welcome to ChitChat!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">First, enter your data</string>
    <string name="title_login_page">Ready to connected the world?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Chatting on ChitChat.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="terravision">ChitChat</string>
    <string name="description">Add description...</string>
    <string name="judul">Title</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="story">Add to Story</string>
    <string name="more_information">More Information</string>
    <string name="id">ID</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="muhammad_daffa_fisabilillah">Muhammad Daffa Fisabilillah</string>
    <string name="share">Share</string>
    <string name="no_data_available">No Data Available</string>
    <string name="empty_image_warning">Empty Image Warning</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">empty text</string>
    <string name="refresh">refresh</string>
    <string name="story_title">Story Title</string>
    <string name="story_description">Story Description</string>
    <string name="masukkan_password">Enter Password</string>
    <string name="masukkan_email">Enter Email</string>
    <string name="masukkan_nama">Enter Name</string>
    <string name="image">image</string>
    <string name="passwordvalidasi1">Password must be at least 8 characters long</string>
    <string name="passwordvalidasi2">Password must contain at least one number</string>
    <string name="passwordvalidasi3">Password must contain at least one unique character</string>
    <string name="loginMessage">You have successfully logged in. Can\'t wait to start learning?</string>
    <string name="fullname">Full Name</string>
    <string name="looking_for_friends">Looking for friends</string>
    <string name="search_user">Search Friends…</string>
    <string name="login_message">Congratulations, are you ready to connect to the outside world?</string>
    <string name="contact">Contact</string>
    <string name="type_a_message">type_a_message</string>
    <string name="chitchat">ChitChat</string>
    <string name="status">Status</string>
</resources>
